create/make an inflight/outflight complaint
