# swagger.json
@@ -313,6 +313,41 @@
                         "example": "645a5fb69e873b782838935c"
                     }
                 }
+            },
+            "Complaint": {
+                "required": [
+                    "category",
+                    "description",
+                    "preferredSolution",
+                    "comment"
+                ],
+                "type": "object",
+                "properties": {
+                    "category": {
+                        "type": "string",
+                        "description": "complaint category",
+                        "example": "645a737285e472388391af63"
+                    },
+                    "description": {
+                        "type": "string",
+                        "description": "complaint description",
+                        "example": "645a737285e472388391af63"
+                    },
+                    "preferredSolution": {
+                        "type": "string",
+                        "description": "complaint preferred solution",
+                        "example": "645a737285e472388391af63"
+                    },
+                    "additionalEvidence": {
+                        "type": "file",
+                        "description": "additional evidence"
+                    },
+                    "comment": {
+                        "type": "string",
+                        "description": "complaint preferred solution",
+                        "example": "The plane is to old to be transporting people around! Please do something"
+                    }
+                }
             }
         }
     },
@@ -420,8 +455,8 @@
                 "tags": [
                     "employee"
                 ],
-                "summary": "",
-                "description": "",
+                "summary": "Employee signup",
+                "description": "Admin can register an employee",
                 "requestBody": {
                     "required": "true",
                     "content": {
@@ -725,6 +760,43 @@
                     },
                     "403": {
                         "$ref": "#/components/responses/Forbidden"
+                    },
+                    "409" : {
+                        "$ref": "#/components/responses/ConflictError"
+                    },
+                    "422" : {
+                        "$ref": "#/components/responses/ValidationError"
+                    },
+                    "500" : {
+                        "$ref": "#/components/responses/ServerError"
+                    }
+                }
+            }
+        },
+
+        "/api/complaint/create": {
+            "post": {
+                "tags": [
+                    "complaint"
+                ],
+                "summary": "Inflight or Outflight complaint",
+                "description": "This route is for filing inflight and outflight complaints",
+                "requestBody": {
+                    "required": "true",
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Complaint"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201" : {
+                        "description": "Your complaint has been sent successfully"
+                    },
+                    "400": {
+                        "$ref": "#/components/responses/BadRequest"
                     },
                     "409" : {
                         "$ref": "#/components/responses/ConflictError"
